<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Widget.MaterialComponents.CardView"
        tools:layout_weight="296dp"
        tools:layout_height="256dp"
        tools:layout_margin="32dp"
        tools:layout_gravity="center"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/whiteSmooth">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

        <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/black"
                android:background="@drawable/ripple"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/back_button_description"/>

        <TextView
                android:id="@+id/sceneTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scene_title_employee"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="@+id/backButton"
                app:layout_constraintStart_toStartOf="@+id/usernameInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/usernameInputLayout"
                app:layout_constraintBottom_toBottomOf="@+id/backButton"
                android:layout_marginBottom="4dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/whiteDark"
                app:barrierAllowsGoneWidgets="false"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintAnimationEnabled="true"
                android:hint="@string/username_hint_employee"
                app:startIconDrawable="@drawable/ic_account_box"
                app:startIconTint="@color/black"
                app:helperTextEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/backButton"
                android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:lines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/whiteDark"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/password_hint"
                app:hintAnimationEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/black"
                app:helperTextEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:lines="1"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/textView"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>