<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
                name="vm"
                type="com.br.flup.app.authentication.viewmodel.AuthViewModel"/>
    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.CardView"
            tools:layout_height="wrap_content"
            tools:layout_margin="32dp"
            tools:layout_gravity="center"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/whitePure"
    >
        <ProgressBar
                android:id="@+id/loadingIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/navyTeal"
                android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE, default = gone}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{vm.isLoading ? View.GONE : View.VISIBLE, default = visible}">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/whiteDark"
                    app:barrierAllowsGoneWidgets="false"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="32dp"
                    app:hintAnimationEnabled="true"
                    android:hint="@string/username_hint_event"
                    app:startIconDrawable="@drawable/ic_account_box"
                    app:startIconTint="@color/black"
                    app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:inputType="textNoSuggestions"
                        android:text="@={vm.form.identifier}"
                        android:maxLines="1"
                        android:lines="1"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/whiteDark"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/password_hint"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:inputType="textPassword"
                        android:text="@={vm.form.password}"
                        android:maxLines="1"
                        android:lines="1"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/textView"
                    android:text="@string/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:clickable="true"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
